@startuml name DatabaseSchema
hide circle
skinparam classAttributeIconSize 0

entity "User" {
  *id : UUID
  --
  email : String
  name : String
  role : Enum [DEV, ADMIN]
  createdAt : DateTime
}

entity "Template" {
  *id : UUID
  --
  title : String
  description : Text
  category : String
  yamlContent : Text
  createdAt : DateTime
}

entity "Repository" {
  *id : UUID
  --
  name : String
  url : String
  provider : Enum [GITHUB, AZURE]
  userId : UUID <<FK>>
}

entity "PipelineRun" {
  *id : UUID
  --
  repoId : UUID <<FK>>
  status : Enum [SUCCESS, FAILED]
  duration : Int
  startedAt : DateTime
}

' Relationships
User "1" -- "0..*" Repository : owns >
Repository "1" -- "0..*" PipelineRun : has >
User "1" -- "0..*" Template : created >

@enduml